test/conformance/chainsaw/reports/background/test-report-background-mode/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: default
