test/conformance/chainsaw/reports/background/test-report-background-mode/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  namespace: default
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: badpod01
scope:
  apiVersion: v1
  kind: Pod
  name: badpod01
  namespace: default
results:
- category: Pod Security
  message: "Validation rule 'restricted' failed. It violates PodSecurity \"restricted:latest\":
        (Forbidden reason: unrestricted capabilities, field error list: [spec.containers[0].securityContext.capabilities.drop:
        Required value])"
  policy: podsecurity-subrule-restricted
  properties:
    controls: capabilities_restricted
    controlsJSON: '[{"ID":"capabilities_restricted","Name":"Capabilities","Images":["docker.io/dummyimagename:latest"]}]'
    standard: restricted
    version: latest
  result: fail
  rule: restricted
  scored: true
  severity: medium
  source: kyverno
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
