test/conformance/chainsaw/reports/background/test-report-background-mode/01-pod.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: pod
spec:
  try:
  - apply:
      file: pod.yaml
  - assert:
      file: pod-assert.yaml
