test/conformance/chainsaw/reports/background/test-report-background-mode/03-report.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: report
spec:
  try:
  - assert:
      file: report-assert.yaml
